--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "qa_tdd",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/selenium-webdriver": "^4.0.10",
-    "chromedriver": "^87.0.0",
-    "jest": "^26.6.3",
-    "selenium-webdriver": "^4.0.0-alpha.7",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
-  }
+    "name": "qa_playground",
+    "version": "1.0.0",
+    "description": "",
+    "main": "",
+    "scripts": {
+        "test": "jest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@types/jest": "^26.0.15",
+        "@types/selenium-webdriver": "^4.0.15",
+        "chromedriver": "^92.0.0",
+        "geckodriver": "^2.0.1",
+        "jest": "^26.6.3",
+        "selenium-webdriver": "^4.0.0-beta.4",
+        "ts-jest": "^26.4.4",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.5"
+    }
 }
